<?xml version="1.0"?>
<package>
  <name>logistic-robot-system</name>
  <version>0.0.0</version>
  <description>The rosnodejs_examples package</description>

  <maintainer email="imcmahon@rethinkrobotics.com">Ian McMahon</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="imcmahon@rethinkrobotics.com">Ian McMahon</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
<run_depend>actionlib_msgs</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>move_base_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
</package>
